--- a/basics-assignment-3-start/src/app/app.component.html
+++ b/basics-assignment-3-start/src/app/app.component.html
@@ -14,4 +14,4 @@
 
 
 <button class="btn btn-primary" [disabled]="!allowClicked" 
-   (click)="onCreateServer()">Add server</button>
+   (click)="onCreateServer()">Display Detail</button>
