--- a/basics-assignment-3-start/src/app/app.component.html
+++ b/basics-assignment-3-start/src/app/app.component.html
@@ -11,3 +11,13 @@
     </div>
   </div>
 </div>
+
+
+<button class="btn btn-primary" (click)="onToggleDetails()">Display Details</button>
+<p *ngIf="showSecret">Secret password = tuna</p>
+<div 
+  *ngFor="let logItem of log"
+  [ngStyle]="{backgroundColor: logItem >= 5 ? 'blue':'transparent'}"
+  [ngClass]="{'white-text': logItem >= 5}">
+  {{ logItem }}
+</div> 
